--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "api-start": "json-server --watch ./product/mock.json --port 3001"
   },
   "dependencies": {
     "next": "11.1.0",
