--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "api-start": "json-server --watch ./product/mock.json --port 3001"
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.13",
+    "axios": "^0.26.1",
     "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1"
   },
   "devDependencies": {
