--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.1",
     "next": "11.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-fast-marquee": "^1.3.1"
+    "react-fast-marquee": "^1.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
