--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "api-start": "json-server --watch ./product/mock.json --port 3001"
+    "api:start": "json-server --watch ./product/mock.json --port 3001"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
@@ -21,10 +21,12 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
+    "@types/remote-redux-devtools": "^0.5.5",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "autoprefixer": "^10.3.1",
